// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSectionItemButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiHeaderSectionItemButton testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiTestCss"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiHeaderSectionItemButton__content"
      />
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders a link 1`] = `
<a
  class="euiButtonEmpty euiHeaderSectionItemButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  href="#"
  rel="noreferrer"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiHeaderSectionItemButton__content"
      />
    </span>
  </span>
</a>
`;

exports[`EuiHeaderSectionItemButton renders children 1`] = `
<button
  class="euiButtonEmpty euiHeaderSectionItemButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiHeaderSectionItemButton__content"
      >
        <span>
          Ahoy!
        </span>
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a badge 1`] = `
<button
  class="euiButtonEmpty euiHeaderSectionItemButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiHeaderSectionItemButton__content"
      />
      <span
        class="euiNotificationBadge euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge emotion-euiNotificationBadge-s-accent"
      >
        1
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a dot 1`] = `
<button
  class="euiButtonEmpty euiHeaderSectionItemButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiHeaderSectionItemButton__content"
      />
      <span
        class="euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--dot"
        color="accent"
        data-euiicon-type="dot"
      />
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification color 1`] = `
<button
  class="euiButtonEmpty euiHeaderSectionItemButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      <span
        class="euiHeaderSectionItemButton__content"
      />
      <span
        class="euiNotificationBadge euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge emotion-euiNotificationBadge-s-subdued"
      >
        1
      </span>
    </span>
  </span>
</button>
`;
